# schuch-py

./: LICENSE  README.md  pyproject.toml
src/eva3dm/: __init__.py  stats.py
src/pyeva3dm/: __init__.py  stats.py
tests/: test_stats.py
