[project]
name = "pyeva3dm"
version = "0.1.0"
authors = [
  { name="Daniel Schuch", email="underschuch@gmail.com" },
]
description = "Some evaluation in python."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Schuch666/schuch-py"
Issues = "https://github.com/Schuch666/schuch-py/issues"
